--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Tech Connects did not bring anything to the bakesale today. Dejon sucks.
-    </h1>
+    <header>
+        {{>header}}
+    </header>
+    {{title}}
 </body>
 </html>
